[FIX] documentation: tabs responsiveness
Prior of this commit, the tabs were not responsive in the documentation

X-original-commit: c9a001d22b2549cc1e391138a68e3c5cab266cd9

--- a/extensions/odoo_theme/static/style.scss
+++ b/extensions/odoo_theme/static/style.scss
@@ -1141,6 +1141,8 @@ header {
     div[role="tablist"] {
         border-color: $gray-light;
         display: inline-flex;
+        overflow-x: auto;
+        overflow-y: clip;
         width: 100%;
     }
 
